--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -1,5 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/main_nav_graph">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/main_nav_graph"
+        app:startDestination="@id/navigationHome">
 
+    <fragment
+            android:id="@+id/navigationHome"
+            android:name="app.igormatos.botaprarodar.presentation.main.TripsFragment" />
+
+    <fragment
+            android:id="@+id/navigationUsers"
+            android:name="app.igormatos.botaprarodar.presentation.main.UsersFragment" />
+    <fragment
+            android:id="@+id/navigationBicycles"
+            android:name="app.igormatos.botaprarodar.presentation.main.BicyclesFragment" />
+    <fragment
+            android:id="@+id/navigationDashboard"
+            android:name="app.igormatos.botaprarodar.presentation.main.DashboardFragment"
+            tools:layout="@layout/fragment_dashboard" />
 </navigation>
+
+
+
