--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -16,9 +16,9 @@
             android:icon="@drawable/ic_directions_bike_black"
             android:title="Bicicletas"/>
 
-    <item
+   <!-- <item
             android:id="@+id/navigationDashboard"
             android:icon="@drawable/ic_dashboard_black"
-            android:title="Painel"/>
+            android:title="Painel"/>-->
 
 </menu>
