update custom dialog and it model

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="margin_minimum">4dp</dimen>
     <dimen name="margin_small">8dp</dimen>
     <dimen name="margin_medium">16dp</dimen>
+    <dimen name="margin_large">24dp</dimen>
     <dimen name="margin_big">32dp</dimen>
 
     <dimen name="padding_small">8dp</dimen>
