--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <color name="colorPrimary">#2A9698</color>
+    <color name="colorPrimary">#018786</color>
     <color name="tintColor">#037F83</color>
     <color name="colorPrimaryDark">#ffffff</color>
     <color name="colorAccent">@color/red</color>
