--- a/app/src/main/res/layout/activity_rent.xml
+++ b/app/src/main/res/layout/activity_rent.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".presentation.adduser.AddUserActivity">
+            tools:context=".presentation.adduser.AddUserFragment">
 
         <com.google.android.material.appbar.AppBarLayout
                 android:id="@+id/appBarLayout"
