--- a/app/src/main/res/layout/fragment_bike_form.xml
+++ b/app/src/main/res/layout/fragment_bike_form.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true"
-            tools:context=".presentation.addbicycle.BikeFormActivity">
+            tools:context=".presentation.addbicycle.BikeFormFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
