--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,6 +21,7 @@
     <dimen name="text_size_xlarge">34sp</dimen>
 
     <dimen name="margin_12">12dp</dimen>
+    <dimen name="padding_24">24dp</dimen>
     <dimen name="separator_height">1dp</dimen>
     <dimen name="circle_image_40">40dp</dimen>
 
