Create tests for BikesUseCase and BikesViewModel

--- a/app/src/main/res/layout/fragment_bikes.xml
+++ b/app/src/main/res/layout/fragment_bikes.xml
@@ -7,7 +7,7 @@
 
         <variable
                 name="viewModel"
-                type="app.igormatos.botaprarodar.presentation.main.BikesViewModel" />
+                type="app.igormatos.botaprarodar.presentation.main.bikes.BikesViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
