add bike actions on TripsFragment

--- a/app/src/main/res/layout/item_bike_action_menu.xml
+++ b/app/src/main/res/layout/item_bike_action_menu.xml
@@ -2,53 +2,54 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="wrap_content"
         android:id="@+id/bikeActionMenu"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:elevation="2dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:padding="@dimen/padding_medium"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
                 android:id="@+id/borrowImageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                app:layout_constraintTop_toTopOf="parent"
+                android:src="@drawable/ic_borrow"
                 app:layout_constraintStart_toStartOf="parent"
-                android:src="@drawable/ic_borrow"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
                 android:id="@+id/bikeImageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_bike"
                 android:layout_marginStart="4dp"
                 android:layout_marginBottom="4dp"
+                android:src="@drawable/ic_bike"
                 app:layout_constraintBottom_toBottomOf="@id/borrowImageView"
-                app:layout_constraintStart_toStartOf="@id/borrowImageView"/>
+                app:layout_constraintStart_toStartOf="@id/borrowImageView" />
 
         <ImageView
                 android:id="@+id/returnImageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toTopOf="parent"
+                android:src="@drawable/ic_return"
                 app:layout_constraintStart_toStartOf="parent"
-                android:src="@drawable/ic_return"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
                 android:id="@+id/bikeActionTextView"
-                android:layout_width="wrap_content"
+                android:layout_width="88dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:text="EMPRESTAR \nBICICLETA"
                 android:textAllCaps="true"
                 android:textColor="@color/bike_action_text_gray"
                 android:textSize="@dimen/text_size_14"
@@ -56,6 +57,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/bikeImageView" />
+                app:layout_constraintTop_toBottomOf="@id/bikeImageView"
+                tools:text="EMPRESTAR BICICLETA DEVOLTA" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
