--- a/app/src/main/res/layout/item_cell.xml
+++ b/app/src/main/res/layout/item_cell.xml
@@ -1,37 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="match_parent"
-                                                   android:id="@+id/cellContainer"
-                                                   android:paddingTop="16dp"
-                                                   android:paddingBottom="16dp"
-                                                   android:layout_height="wrap_content">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/cellContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:background="@color/white">
 
     <ImageView
+            android:id="@+id/cellImageView"
             android:layout_width="60dp"
             android:layout_height="63dp"
-            tools:srcCompat="@tools:sample/avatars"
-            android:id="@+id/cellImageView"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp"
-            app:layout_constraintTop_toTopOf="parent"/>
-    <TextView
-            tools:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/cellTitle"
-            app:layout_constraintTop_toTopOf="@id/cellImageView"
-            app:layout_constraintStart_toEndOf="@id/cellImageView"
-            android:layout_marginStart="8dp" android:textSize="24sp"
-            android:maxLength="20"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-            tools:text="TextView"
+            android:id="@+id/cellTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/cellSubtitle" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/cellTitle"
+            android:layout_marginStart="8dp"
+            android:maxLength="20"
+            android:textSize="24sp"
             app:layout_constraintStart_toEndOf="@id/cellImageView"
-            android:layout_marginStart="8dp"/>
+            app:layout_constraintTop_toTopOf="@id/cellImageView"
+            tools:text="TextView" />
+
+    <TextView
+            android:id="@+id/cellSubtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toEndOf="@id/cellImageView"
+            app:layout_constraintTop_toBottomOf="@id/cellTitle"
+            tools:text="TextView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
