--- a/app/src/main/res/layout/item_bike_action_menu.xml
+++ b/app/src/main/res/layout/item_bike_action_menu.xml
@@ -40,7 +40,7 @@
                 android:id="@+id/returnImageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="@dimen/margin_medium"
                 android:src="@drawable/ic_return"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
