--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,5 +19,7 @@
     <color name="separator_gray">#14212121</color>
     <color name="title_gray">#4F4F4F</color>
     <color name="bike_action_text_gray">#828282</color>
+    <color name="green_teal">#018786</color>
+    <color name="gray_silver">#BDBDBD</color>
     <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/colorPrimary</color>
 </resources>
